tests/fixtures/typecheck/invalid/missing_required_verb_arg.sr
rule "EQ: Missing Kind" in underlying:
    when true:
        then emit_signal(reason="missing_kind")
